Issue #323 - Update message display for legibility
Center align the timestamp and error severity log entry components. Add
a small border to the left and right side of the severity component to
provide an obvious separation between all of the entry components.

--- a/bliss/gui/static/css/bliss/gui/Messages.css
+++ b/bliss/gui/static/css/bliss/gui/Messages.css
@@ -54,12 +54,16 @@ bliss-messages .timestamp {
     order: 1;
     min-width: 166px;
     margin-right: 7px;
+    text-align: center;
 }
 
 bliss-messages .severity {
     order: 2;
-    min-width: 73px;
+    min-width: 95px;
     margin-right: 5px;
+    text-align: center;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
 }
 
 bliss-messages .message {
